--- a/source/sass/blocks/testimonial-card.scss
+++ b/source/sass/blocks/testimonial-card.scss
@@ -134,4 +134,7 @@
   .testimonial-card {
     margin-bottom: 20px;
   }
+  .testimonial-card blockquote {
+    margin: 10px 10px 10px 12px;
+  }
 }
