--- a/source/sass/blocks/watch-your-favorite-animal.scss
+++ b/source/sass/blocks/watch-your-favorite-animal.scss
@@ -113,8 +113,9 @@
 
 @media (max-width: $mobile-width) {
   .watch-your-favorite-animal {
+    padding-bottom: 40px;
     background-image: url("../assets/img/giant-panda_mobile.jpg");
-    background-position: center -26px;
+    background-position: center 33px;
   }
   .watch-your-favorite-animal__wrapper {
     max-width: 300px;
@@ -137,7 +138,7 @@
     width: 100%;
     position: absolute;
     padding: 14px 95px;
-    top: 209px;
+    top: 216px;
     z-index: 100;
   }
 }
